force-app/main/default/objects/LT_Tracking_Event__c/LT_Tracking_Event__c.object-meta.xml
<CustomObject>
    <description>Evento de Rastreamento - LogiTrack Operations 360.</description>
    <label>Evento de Rastreamento</label>
    <nameField>
        <displayFormat>EV-{000000}</displayFormat>
        <label>Codigo do Evento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Eventos de Rastreamento</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>