force-app/main/default/objects/LT_Tracking_Event__c/fields/LT_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver__c</fullName>
    <description>Motorista que manuseou a remessa neste evento.</description>
    <label>Motorista</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Eventos de Rastreamento</relationshipLabel>
    <relationshipName>LT_Tracking_Events</relationshipName>
    <type>Lookup</type>
</CustomField>