force-app/main/default/objects/LT_Tracking_Event__c/fields/LT_Event_DateTime__c.field-meta.xml
<CustomField>
    <fullName>LT_Event_DateTime__c</fullName>
    <description>Momento em que o evento ocorreu.</description>
    <label>Data/Hora do Evento</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>