force-app/main/default/objects/LT_Tracking_Event__c/fields/LT_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Event_Type__c</fullName>
    <description>Natureza do evento de rastreamento.</description>
    <label>Tipo de Evento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Etiqueta Gerada</fullName>
            </value>
            <value>
                <fullName>Coleta Realizada</fullName>
            </value>
            <value>
                <fullName>Chegada ao SC</fullName>
            </value>
            <value>
                <fullName>Triagem no SC</fullName>
            </value>
            <value>
                <fullName>Saida do SC (Transferencia)</fullName>
            </value>
            <value>
                <fullName>Chegada a Base</fullName>
            </value>
            <value>
                <fullName>Triagem na Base</fullName>
            </value>
            <value>
                <fullName>Bipado para Rota</fullName>
            </value>
            <value>
                <fullName>Saiu para Entrega</fullName>
            </value>
            <value>
                <fullName>Entregue</fullName>
            </value>
            <value>
                <fullName>Tentativa de Entrega</fullName>
            </value>
            <value>
                <fullName>Destinatario Ausente</fullName>
            </value>
            <value>
                <fullName>Endereco Nao Localizado</fullName>
            </value>
            <value>
                <fullName>Recusado pelo Destinatario</fullName>
            </value>
            <value>
                <fullName>Avaria Identificada</fullName>
            </value>
            <value>
                <fullName>Retido</fullName>
            </value>
            <value>
                <fullName>Sem Movimentacao Detectada</fullName>
            </value>
            <value>
                <fullName>Devolucao Iniciada</fullName>
            </value>
            <value>
                <fullName>Extravio Registrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>