force-app/main/default/objects/LT_Tracking_Event__c/fields/LT_Event_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>LT_Event_Type_Text__c</fullName>
    <description>Versao texto do Tipo de Evento (usada em automacoes).</description>
    <label>Tipo de Evento (texto)</label>
    <formula>TEXT(LT_Event_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Text</type>
</CustomField>