force-app/main/default/objects/LT_Tracking_Event__c/fields/LT_Location_City__c.field-meta.xml
<CustomField>
    <fullName>LT_Location_City__c</fullName>
    <description>Cidade onde o evento foi registrado.</description>
    <label>Cidade do Evento</label>
    <type>Text</type>
    <length>80</length>
</CustomField>