force-app/main/default/objects/LT_Tracking_Event__c/fields/LT_Notes__c.field-meta.xml
<CustomField>
    <fullName>LT_Notes__c</fullName>
    <description>Observacoes do evento.</description>
    <label>Observacoes</label>
    <type>Text</type>
    <length>255</length>
</CustomField>