force-app/main/default/objects/LT_Tracking_Event__c/fields/LT_Responsible_User__c.field-meta.xml
<CustomField>
    <fullName>LT_Responsible_User__c</fullName>
    <description>Usuario que registrou o evento.</description>
    <label>Registrado Por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Eventos de Rastreamento Registrados</relationshipLabel>
    <relationshipName>LT_Registered_Tracking_Events</relationshipName>
    <type>Lookup</type>
</CustomField>