force-app/main/default/objects/LT_Tracking_Event__c/fields/LT_Unit__c.field-meta.xml
<CustomField>
    <fullName>LT_Unit__c</fullName>
    <description>Unidade logistica onde o evento ocorreu.</description>
    <label>Unidade</label>
    <referenceTo>LT_Logistics_Unit__c</referenceTo>
    <relationshipLabel>Eventos de Rastreamento</relationshipLabel>
    <relationshipName>LT_Tracking_Events</relationshipName>
    <type>Lookup</type>
</CustomField>