force-app/main/default/objects/LT_Tracking_Event__c/validationRules/LT_Event_Delivered_Requires_Driver.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Event_Delivered_Requires_Driver</fullName>
    <active>true</active>
    <description>Evento Entregue exige o motorista responsavel.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Event_Type__c, "Entregue"), ISBLANK(LT_Driver__c))</errorConditionFormula>
    <errorDisplayField>LT_Driver__c</errorDisplayField>
    <errorMessage>Informe o Motorista no evento de entrega.</errorMessage>
</ValidationRule>