force-app/main/default/objects/LT_Tracking_Event__c/validationRules/LT_Event_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Event_Not_Future</fullName>
    <active>true</active>
    <description>O evento nao pode ter data futura.</description>
    <errorConditionFormula>LT_Event_DateTime__c &gt; NOW() + 0.0417</errorConditionFormula>
    <errorDisplayField>LT_Event_DateTime__c</errorDisplayField>
    <errorMessage>A Data/Hora do Evento nao pode estar no futuro.</errorMessage>
</ValidationRule>