force-app/main/default/objects/LT_Tracking_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Shipment__c</columns>
    <columns>LT_Event_Type__c</columns>
    <columns>LT_Event_DateTime__c</columns>
    <columns>LT_Unit__c</columns>
    <columns>LT_Driver__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>